--- a/index.html
+++ b/index.html
@@ -184,6 +184,113 @@
     </div>
   </div>
   <!--End Our Work-->
+      <!-- Start Contactme-->
+  <div class="Contactme" id="Contactme">
+    <div class="image">
+    <div class="content">
+        <h2>info</h2>       
+        <p>
+            <i class="fa-regular fa-envelope"></i>a7med41114@gmail.com
+            <hr>
+            <i class="fa-solid fa-phone"></i>+201003252891
+            <hr>
+            <i class="fa-brands fa-linkedin"></i>ahmed-tawfik1812
+        </p>
+        <img decoding="async" src="Images/megmenu.jpg" alt=""/>
+    </div>
+    </div>
+    <div class="form">
+        <div class="content">
+        <h2>Send your message</h2>
+        <form action="">
+            <input  class="input" type="text" placeholder="Name" name="Name" required>
+            <input class="input" type="email" placeholder="Email" name="email" required>
+            <input class="input" type="text" placeholder="Your Phone" name="phone" required>
+            <textarea class="input" placeholder="Enter your Message" name="Message" ></textarea>
+            <input class="submit" type="submit" value="send">
+        </form>
+    </div>
+    </div>
+</div>  
+<!-- End Contactme-->
+
+<!-- Start footer-->
+<div class="footer pt-5 pb-5 text-white-50 text-center text-md-start">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-lg-4">
+        <div class="info mb-5">
+          <img src="images/logo.png" alt="" class="mb-4 w-50 p-3">
+          <p class="mb-5">
+            Frontend Devloper High level experience in 
+            web design and development knowledge, producing quality work
+          </p>
+          <div class="copyright">
+            Created by <span>AHMED ALI</span>
+            <div>&copy; 2024 - <span>AHMED</span></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-2">
+        <div class="links">
+          <h5 class="text-light">Links</h5>
+          <ul class="list-unstyled lh-lg">
+            <li>Home</li>
+            <li>Our Services</li>
+            <li>Portfolio</li>
+            <li>Support</li>
+            <li>Terms and Condition</li>
+            <li>Our Work</li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-2">
+        <div class="links">
+          <h5 class="text-light">About Us</h5>
+          <ul class="list-unstyled lh-lg">
+            <li>Sign In</li>
+            <li>Register</li>
+            <li>About Us</li>
+            <li>Blog</li>
+            <li>Contact Me</li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-4">
+        <div class="contact">
+          <h5 class="text-light">Contact Me</h5>
+          <p class="lh-lg mt-3 mb-5">Get in touch with us via mail phone.
+            We are waiting for your call or message
+          </p>
+          <a class="btn  rounded-pill main-btn w-100" href="#">a7med41114@gmail.com</a>
+          <ul class="d-flex mt-5 list-unstyled gap-3 w-25">
+            <li>
+              <a class="d-block text-light" href="https://www.linkedin.com/in/ahmed-tawfik1812" target="_blank">
+                <i class="fa-brands fa-linkedin fa-lg linkedin rounded-circle p-2"></i>
+              </a>
+            </li>
+            <li>
+              <a class="d-block text-light" href="https://github.com/AhmedAli1812" target="_blank">
+                <i class="fa-brands fa-github fa-lg github rounded-circle p-2" ></i>
+              </a>
+            </li>
+            <li>
+              <a class="d-block text-light" href="https://t.me/A7MED_1812" target="_blank">
+                <i class="fa-brands fa-telegram fa-lg telegram rounded-circle p-2"></i>
+              </a>
+            </li>
+            <li>
+              <a class="d-block text-light" href="https://www.facebook.com/alimedo.ahmedx?mibextid=ZbWKwL" target="_blank">
+                <i class="fa-brands fa-facebook fa-lg facebook rounded-circle p-2"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End footer-->
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/all.min.js"></script>
 </body>
