--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <hr>
             <i class="fa-brands fa-linkedin"></i>ahmed-tawfik1812
         </p>
-        <img decoding="async" src="Images/megmenu.jpg" alt=""/>
+        <img decoding="async" src="images/megmenu.jpg" alt=""/>
     </div>
     </div>
     <div class="form">
